termiando registro y consulta

--- a/Client/Pages/Consultas/C_Tickests.razor
+++ b/Client/Pages/Consultas/C_Tickests.razor
@@ -17,11 +17,11 @@
             <table class="table table-striped table-hover">
                 <thead>
                     <tr>
-                        <th>ClienteId</th>
-                        <th>Nombres</th>
-                        <th>Rnc</th>
-                        <th>Direcci&oacute;n</th>
-                        <th>L&iacute;mite Cr&eacute;dito</th>
+                        <th>Ticket Id</th>
+                        <th>Fecha</th>
+                        <th>Solicitado Por</th>
+                        <th>Asunto</th>
+                        <th>Descripción</th>
                         <th></th>
                     </tr>
                 </thead>
